added reviews section

--- a/faq.html
+++ b/faq.html
@@ -58,19 +58,19 @@
                     <a href="index.html" class="nav-item nav-link">Home</a>
                     <!-- <a href="about.html" class="nav-item nav-link">About</a> -->
                     <a href="menu.html" class="nav-item nav-link">Menu</a>
-                    <a href="services.html" class="nav-item nav-link">Services</a>
+                    <a href="faq.html" class="nav-item nav-link">FAQ</a>
                     <!-- <a href="booking.html" class="nav-item nav-link">Booking</a> -->
                     <div class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Order</a>
-                        <div class="dropdown-menu m-0">
-                            <a href="https://mamabobo.co.uk/?serviceType=Pickup&utm_source=GoogleRedirect&utm_medium=organic&rwg_token=AJKvS9WDQEzg3d3PSJxr2oVfbPOf0tAx7orgvXtcpvimAZIwaTXSYw56QtqVqhoQ1eTdSZsN4Ix8xzfXB4P4oJklOa2DejWSdw%3D%3D" class="dropdown-item">OrderYOYO</a>
-                            <a href="https://www.ubereats.com/gb/store/mama-bobo-restaurant/fBYs2Wk_XsKQX_xu53hhyw?diningMode=PICKUP&utm_campaign=place-action-link&utm_medium=organic&utm_source=google" class="dropdown-item">UberEats</a>
-                            <a href="https://www.just-eat.co.uk/restaurants-mama-bobo-africa-restaurant-ballynafoy/menu?serviceType=collection&utm_source=google&utm_medium=organic&utm_campaign=foodorder" class="dropdown-item">JustEats</a>
-                        </div>
+                      <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Order</a>
+                      <div class="dropdown-menu m-0">
+                        <a href="https://deliveroo.co.uk/menu/Belfast/ballynafeigh/mama-bobo-restaurant?geohash=gcey3r6m7vxq" class="dropdown-item">Deliveroo</a>
+                        <a href="https://www.ubereats.com/gb/store/mama-bobo-restaurant/fBYs2Wk_XsKQX_xu53hhyw?diningMode=PICKUP&utm_campaign=place-action-link&utm_medium=organic&utm_source=google" class="dropdown-item">UberEats</a>
+                        <a href="https://www.just-eat.co.uk/restaurants-mama-bobo-africa-restaurant-ballynafoy/menu?serviceType=collection&utm_source=google&utm_medium=organic&utm_campaign=foodorder" class="dropdown-item">JustEats</a>
+                      </div>
                     </div>
                     <a href="contact.html" class="nav-item nav-link">Contact Us</a>
                 </div>
-                <a href="booking.html" class="btn btn-primary py-2 px-4">Book A Table</a>
+                <!-- <a href="booking.html" class="btn btn-primary py-2 px-4">Book A Table</a> -->
             </div>
         </nav>
 
@@ -292,12 +292,11 @@
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6">
-                        <h5 class="section-title ff-secondary text-start text-primary fw-normal mb-4">Opening</h5>
-                        <p class="text-light fw-normal">Monday - <i>closed</i></p>
-                        <p class="text-light fw-normal">Tuesday - Thursday</p>
-                        <p class="text-light fw-normal"><i>5pm - 9pm</i></p>
-                        <p class="text-light fw-normal">Friday - Sunday</p>
-                        <p class="text-light fw-normal"><i>12pm - 9pm</i></p>
+                      <h5 class="section-title ff-secondary text-start text-primary fw-normal mb-2">Opening</h5>
+                      <p class="text-light fw-normal">Monday - <i>closed</i></p>
+                      <p class="text-light fw-normal">Tuesday - Thursday <i>(5pm - 9pm)</i></p>
+                      <p class="text-light fw-normal">Friday - Saturday <i>(3pm - 9pm)</i></p>
+                      <p class="text-light fw-normal">Sunday <i>(12pm - 7pm)</i></p>
                     </div>
                     <div class="col-lg-3 col-md-6">
                         <h5 class="section-title ff-secondary text-start text-primary fw-normal mb-4">Offers & Rewards</h5>
