--- a/index.html
+++ b/index.html
@@ -58,19 +58,19 @@
                         <a href="index.html" class="nav-item nav-link">Home</a>
                         <!-- <a href="about.html" class="nav-item nav-link">About</a> -->
                         <a href="menu.html" class="nav-item nav-link">Menu</a>
-                        <a href="services.html" class="nav-item nav-link">Services</a>
+                        <a href="faq.html" class="nav-item nav-link">FAQ</a>
                         <!-- <a href="booking.html" class="nav-item nav-link">Booking</a> -->
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Order</a>
                             <div class="dropdown-menu m-0">
-                                <a href="https://mamabobo.co.uk/?serviceType=Pickup&utm_source=GoogleRedirect&utm_medium=organic&rwg_token=AJKvS9WDQEzg3d3PSJxr2oVfbPOf0tAx7orgvXtcpvimAZIwaTXSYw56QtqVqhoQ1eTdSZsN4Ix8xzfXB4P4oJklOa2DejWSdw%3D%3D" class="dropdown-item">OrderYOYO</a>
+                                <a href="https://deliveroo.co.uk/menu/Belfast/ballynafeigh/mama-bobo-restaurant?geohash=gcey3r6m7vxq" class="dropdown-item">Deliveroo</a>
                                 <a href="https://www.ubereats.com/gb/store/mama-bobo-restaurant/fBYs2Wk_XsKQX_xu53hhyw?diningMode=PICKUP&utm_campaign=place-action-link&utm_medium=organic&utm_source=google" class="dropdown-item">UberEats</a>
                                 <a href="https://www.just-eat.co.uk/restaurants-mama-bobo-africa-restaurant-ballynafoy/menu?serviceType=collection&utm_source=google&utm_medium=organic&utm_campaign=foodorder" class="dropdown-item">JustEats</a>
                             </div>
                         </div>
                         <a href="contact.html" class="nav-item nav-link">Contact Us</a>
                     </div>
-                    <a href="booking.html" class="btn btn-primary py-2 px-4">Book A Table</a>
+                    <!-- <a href="booking.html" class="btn btn-primary py-2 px-4">Book A Table</a> -->
                 </div>
             </nav>
 
@@ -79,7 +79,7 @@
                     <div class="row align-items-center g-5">
                         <div class="col-lg-6 text-center text-lg-start">
                             <h1 class="display-3 text-white animated slideInLeft">Authentic <br>Nigerian Cuisine</h1>
-                            <p class="text-white animated slideInLeft mb-4 pb-2">Come and taste why Nigerian food is so popular.</p>
+                            <p class="text-white animated slideInLeft mb-4 pb-2">Come and taste why our food is so popular.</p>
                             <a href="menu.html" class="btn btn-primary py-sm-3 px-sm-5 me-3 animated slideInLeft">View Menu</a>
                         </div>
                         <div class="col-lg-6 text-center text-lg-end overflow-hidden">
@@ -344,7 +344,7 @@
                             <div class="p-4">
                                 <i class="fa fa-3x fa-utensils text-primary mb-4"></i> 
                                 <h5>Catering</h5>
-                                <p class="service_paragraph">At MamaBobo’s, Whether you are hosting a wedding, a corporate event, or a birthday, we offer customized menus that cater to a variety of tastes and dietary needs.</p>
+                                <p class="service_paragraph">At MamaBobo’s, Whether you are hosting a wedding, a corporate event, or a birthday, we offer customized menus that cater to a variety of tastes and dietary needs.You can send us an email via <i>info@mamaboborestaurant.co.uk</i></p>
                             </div>
                         </div>
                     </div>
@@ -403,7 +403,69 @@
         <!-- order End -->
 
 
-        <!-- Reservation Start -->
+        <!--- testimonials-->
+
+        <div class="container-xxl">
+            <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
+                <h2 class="section-title ff-secondary text-center text-primary fw-normal mb-3">Reviews</h2>
+            </div>
+            <div class="row">
+                <div class="col-sm-4">
+                    <div class="card wow fadeInUp" data-wow-delay="0.1s">
+                        <div class="card-body">
+                            <div class="card-text">
+                                Had the jollof rice, red stew, beef suya and spring rolls and was really tasty! the service was excellent, as the staf walked us through the menu and explained the items on it, allowing us to try some of the traditional food and drinks. i …More
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-body">
+                                <div class="card-text">
+                                    Mohammed Saqqaf
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-4">
+                    <div class="card wow fadeInUp" data-wow-delay="0.1s">
+                        <div class="card-body">
+                            <div class="card-text">
+                                We enjoyed visiting the restaurant during our visit to Belfast. The food was really tasty and the ambience just brings to mind the memory of home. They make all Nigerian/African meals and have drinks peculiar to that region. They could do …More
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-body">
+                                <div class="card-text">
+                                    Olubunmi Bitrus
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-4">
+                    <div class="card wow fadeInUp" data-wow-delay="0.1s">
+                        <div class="card-body">
+                            <div class="card-text">
+                                Service was great, didn't know what to try but the server recommended really nice dishes, beef suya starter was super spicy but really nice, all the food was fantastic, pounded yam was really nice , big portions and very filling. Friendly atmosphere
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-body">
+                                <div class="card-text">
+                                    Chris Kelly
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+        <!--- testimonials end-->
+
+        <!-- Reservation Start
         <div class="container-xxl py-5 px-0 wow fadeInUp" data-wow-delay="0.1s" id="booking">
             <div class="row g-0">
                 <div class="col-md-6">
@@ -454,7 +516,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <!-- Reservation end -->
 
 
@@ -490,11 +552,9 @@
                     <div class="col-lg-3 col-md-6">
                         <h5 class="section-title ff-secondary text-start text-primary fw-normal mb-2">Opening</h5>
                         <p class="text-light fw-normal">Monday - <i>closed</i></p>
-                        <p class="text-light fw-normal">Tuesday - Thursday</p>
-                        <p class="text-light fw-normal"><i>5pm - 9pm</i></p>
-                        <p class="text-light fw-normal">Friday - Sunday</p>
-                        <p class="text-light fw-normal"><i>12pm - 9pm</i></p>
-                        
+                        <p class="text-light fw-normal">Tuesday - Thursday <i>(5pm - 9pm)</i></p>
+                        <p class="text-light fw-normal">Friday - Saturday <i>(3pm - 9pm)</i></p>
+                        <p class="text-light fw-normal">Sunday <i>(12pm - 7pm)</i></p>
                     </div>
                     <div class="col-lg-3 col-md-6">
                         <h5 class="section-title ff-secondary text-start text-primary fw-normal mb-4">Offers & Rewards</h5>
