--- a/index.html
+++ b/index.html
@@ -414,13 +414,13 @@
                     <div class="card wow fadeInUp" data-wow-delay="0.1s">
                         <div class="card-body">
                             <div class="card-text">
-                                Had the jollof rice, red stew, beef suya and spring rolls and was really tasty! the service was excellent, as the staf walked us through the menu and explained the items on it, allowing us to try some of the traditional food and drinks. i …More
+                                Had the jollof rice, red stew, beef suya and spring rolls and was really tasty! the service was excellent, as the staf walked us through the menu and explained the items on it, allowing us to try some of the traditional food and drinks. i <a href="https://www.google.com/search?hl=en-GB&gl=uk&q=Mama+Bobo+Restaurant,+407+Ormeau+Rd,+Ormeau,+Belfast+BT7+3GP&ludocid=18359197781127824059&lsig=AB86z5V5Tkz1hzRSPauuPEfMjMaW&hl=en&gl=GB#lrd=0x486109385e1f4587:0xfec8f91c594382bb,1,,,,">...More</a>
                             </div>
                         </div>
                         <div class="card">
                             <div class="card-body">
                                 <div class="card-text">
-                                    Mohammed Saqqaf
+                                    Emma
                                 </div>
                             </div>
                         </div>
@@ -431,7 +431,7 @@
                     <div class="card wow fadeInUp" data-wow-delay="0.1s">
                         <div class="card-body">
                             <div class="card-text">
-                                We enjoyed visiting the restaurant during our visit to Belfast. The food was really tasty and the ambience just brings to mind the memory of home. They make all Nigerian/African meals and have drinks peculiar to that region. They could do …More
+                                We enjoyed visiting the restaurant during our visit to Belfast. The food was really tasty and the ambience just brings to mind the memory of home. They make all Nigerian/African meals and have drinks peculiar to that region. They could do<a href="https://www.google.com/search?hl=en-GB&gl=uk&q=Mama+Bobo+Restaurant,+407+Ormeau+Rd,+Ormeau,+Belfast+BT7+3GP&ludocid=18359197781127824059&lsig=AB86z5V5Tkz1hzRSPauuPEfMjMaW&hl=en&gl=GB#lrd=0x486109385e1f4587:0xfec8f91c594382bb,1,,,,">...More</a>
                             </div>
                         </div>
                         <div class="card">
@@ -448,7 +448,7 @@
                     <div class="card wow fadeInUp" data-wow-delay="0.1s">
                         <div class="card-body">
                             <div class="card-text">
-                                Service was great, didn't know what to try but the server recommended really nice dishes, beef suya starter was super spicy but really nice, all the food was fantastic, pounded yam was really nice , big portions and very filling. Friendly atmosphere
+                                Service was great, didn't know what to try but the server recommended really nice dishes, beef suya starter was super spicy but really nice, all the food was fantastic, pounded yam was really nice , big portions and very filling<a href="https://www.google.com/search?hl=en-GB&gl=uk&q=Mama+Bobo+Restaurant,+407+Ormeau+Rd,+Ormeau,+Belfast+BT7+3GP&ludocid=18359197781127824059&lsig=AB86z5V5Tkz1hzRSPauuPEfMjMaW&hl=en&gl=GB#lrd=0x486109385e1f4587:0xfec8f91c594382bb,1,,,,">...More</a>
                             </div>
                         </div>
                         <div class="card">
