--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
                 </div>
                 <div class="row g-4 justify-content-center">
                     <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.1s">
-                        <div class="order-item order_card rounded pt-3">
+                        <div class="order-item order_card rounded pt-3 justify-content-center">
                             <div class="p-3">
                                 <a href="https://deliveroo.co.uk/menu/Belfast/ballynafeigh/mama-bobo-restaurant?geohash=gcey3r6m7vxq">
                                     <img src="./img/Deliveroo_idKKFMG4Kl_1.png" alt="yoyo logo" class="order_logo">
@@ -377,7 +377,7 @@
 
                     
                     <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.3s">
-                        <div class="order-item order_card rounded pt-3">
+                        <div class="order-item order_card rounded pt-3 justify-content-center">
                             <div class="p-4">
                                 <a href="https://www.ubereats.com/gb/store/mama-bobo-restaurant/fBYs2Wk_XsKQX_xu53hhyw?diningMode=PICKUP&utm_campaign=place-action-link&utm_medium=organic&utm_source=google">
                                     <svg class="order_logo" xmlns="http://www.w3.org/2000/svg" viewBox="0.19000000000000128 0.25 367.46 61.17460741747068"><g fill="none"><path d="M194.32.25h40.87v10h-29.83v14.2h29v9.66h-29v14.44h29.83v10h-40.87zM348.06 59.6c12.53 0 19.59-6 19.59-14.24 0-5.87-4.18-10.25-12.93-12.15l-9.25-1.89c-5.37-1-7.06-2-7.06-4 0-2.59 2.59-4.18 7.36-4.18 5.17 0 9 1.39 10 6.17h10.84c-.59-9-7.06-14.94-20.18-14.94-11.34 0-19.3 4.68-19.3 13.75 0 6.27 4.38 10.35 13.83 12.34l10.34 2.39c4.08.8 5.17 1.9 5.17 3.59 0 2.69-3.08 4.38-8.06 4.38-6.26 0-9.84-1.39-11.23-6.17h-10.9c1.59 8.98 8.25 14.95 21.78 14.95zm-24.93-1.09H311.4c-7.36 0-11.44-4.58-11.44-10.36v-22.9h-8.25v-9.76H300V3.24h10.9v12.25h12.23v9.76H310.9v20.11c0 2.29 1.59 3.39 4.08 3.39h8.15zm-47-43v3.88a21.16 21.16 0 0 0-13.73-5 22.61 22.61 0 1 0 0 45.21 21.1 21.1 0 0 0 13.73-5v3.89H287v-43zM263.3 50.16a13.15 13.15 0 1 1 13-13.14 13 13 0 0 1-13.02 13.12z" fill="#05c167"/><path d="M170.06 23.56c-5.47 0-9.35 4.28-9.35 10.85v24.1h-8.35V16.09h8.25v5.18a11.19 11.19 0 0 1 9.94-5.48h3v7.77zM146.59 37.3c0-12.65-9-22.11-21.18-22.11a21.83 21.83 0 0 0-21.68 22.11c0 12.64 9.75 22.2 22.47 22.2a22.17 22.17 0 0 0 18.3-9.06L138.44 46a14.78 14.78 0 0 1-12.24 6.17 14.22 14.22 0 0 1-14-12.14h34.41zm-34.21-3.89c1.49-6.47 6.66-10.85 12.93-10.85s11.43 4.38 12.83 10.85zm-35.1-18.22a21.12 21.12 0 0 0-15 6.27V.25h-8.35v58.26h8.25v-5.38A21.45 21.45 0 0 0 77.3 59.5a22.16 22.16 0 1 0 0-44.31zm-.6 36.85A14.69 14.69 0 1 1 91.3 37.4 14.58 14.58 0 0 1 76.68 52zm-53.5-.4c8.06 0 14.32-6.18 14.32-15.44V.25h8.65v58.26H37.6V53a21.24 21.24 0 0 1-15.41 6.47c-12.43 0-22-9.06-22-22.8V.25H9v36c0 9.31 6 15.39 14.18 15.39z" fill="#000"/></g></svg>
@@ -386,7 +386,7 @@
                         </div>
                     </div>
                     <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.7s">
-                        <div class="order-item order_card rounded pt-0">
+                        <div class="order-item order_card rounded pt-0 justify-content-center">
                             <div class="p-3">
                                 <a href="https://www.just-eat.co.uk/restaurants-mama-bobo-africa-restaurant-ballynafoy/menu?serviceType=collection&utm_source=google&utm_medium=organic&utm_campaign=foodorder">
                                     <svg class="order_logo" clip-rule="evenodd" fill-rule="evenodd" stroke-linejoin="round" stroke-miterlimit="2" viewBox="-7.18746979 -26.38168905 168.95246979 114.18459908" xmlns="http://www.w3.org/2000/svg"><path d="m18.184.838a2.235 2.235 0 0 1 2.483 0 53.87 53.87 0 0 1 5.498 3.962s.476.33.489-.229a8.72 8.72 0 0 1 .127-2.158.984.984 0 0 1 .914-.635s2.159.108 3.53.292a1.34 1.34 0 0 1 1.156 1.187s.882 5.88 1.08 8c0 0 .17 1.08 1.733 2.908 0 0 3.174 4.445 3.543 5.295 0 0 .736 1.537-.851 1.746 0 0-2.896.292-3.175.356a.724.724 0 0 0 -.635.787s-.152 10.229-.901 15.143c0 0-.197 1.95-1.27 1.905 0 0-2.978-.095-3.67-.076 0 0-.298 0-.254-.4 0 0 1.517-15.95.489-24.013 0 0-.045-1.041-.838-1.27 0 0-.724-.292-1.416.635a25.302 25.302 0 0 0 -4.711 14.394s-.083 2.54.305 3.174c0 0 .24.445 1.473.546l1.561.21s.286 0 .26.38c0 0-.355 4.68-.456 5.512-.007.19-.045.376-.115.552 0 0-.057.159-.546.14 0 0-6.882-.05-7.657 0 0 0-.324 0-.393-.171-.07-.172-.477-6.039-.464-6.87a.414.414 0 0 1 .241-.407 4.139 4.139 0 0 0 1.905-3.04c.084-.89.096-1.783.038-2.674 0 0 .254-8.971.318-10.413 0 0 .05-.489-.585-.577a.592.592 0 0 0 -.711.438v.05c0 .051-.444 5.918-.362 8.254 0 0 .153 1.53-.907 1.562 0 0-1.029.153-1.08-1.123 0 0 .076-5.753.33-8.597a.635.635 0 0 0 -.565-.635.633.633 0 0 0 -.71.514.106.106 0 0 0 0 .05s-.445 5.506-.363 8.414c0 0 .127 1.41-.997 1.358 0 0-.94.108-.99-1.143 0 0 .254-7.879.324-8.488a.635.635 0 0 0 -.565-.597h-.064a.636.636 0 0 0 -.68.527.271.271 0 0 0 0 .057s-.418 9.422-.361 12.19c0 0-.038 2.845 2.063 4 0 0 .311.178.318.451 0 0 .235 4.997.45 6.61 0 0 .077.387-.266.387l-5.289.146a1.088 1.088 0 0 1 -1.08-1.029 118.401 118.401 0 0 1 -.977-15.968.813.813 0 0 0 -.635-.87s-2.705-.247-3.359-.412a1.124 1.124 0 0 1 -.686-1.658 54.422 54.422 0 0 1 17.957-18.679zm37.245 14.8h-5.22c-1.688 0-1.688 0-2.044 1.975-.355 1.974-.35 2.044 1.2 2.044h3.105l-1.765 10.089c-.426 2.254-1.41 3.81-4.445 4.724-.774.21-.984.489-.984.844.054.568.223 1.119.495 1.62.49 1.2.775 1.415 1.194 1.415a8.01 8.01 0 0 0 1.486-.286c4.298-1.409 6.063-4.723 6.768-8.673l1.975-11.352c.349-2.4.349-2.4-1.765-2.4m17.701 0c-2.114 0-2.114 0-2.4 1.765l-1.524 9.168c-.425 2.68-1.13 4.229-3.74 4.229-2.609 0-3.453-1.55-3.028-3.95l1.48-8.742c.425-2.47.349-2.47-1.835-2.47-2.185 0-2.185 0-2.47 1.695l-1.55 9.169c-.914 5.219 2.33 8.457 6.915 8.457 5.143 0 7.752-2.324 8.597-7.822l1.555-9.099c.35-2.4.21-2.4-1.974-2.4m9.631 15.022c1.696-.07 2.61-.844 2.61-1.619 0-.99-1.2-1.34-2.82-1.835-3.174-.99-6.063-2.114-6.063-5.498 0-4.02 3.315-6.21 7.473-6.21a49.87 49.87 0 0 1 5.01.216c1.124.14 1.41.49 1.054 2.254-.356 1.765-.775 1.905-1.759 1.835-1.2-.07-2.755-.216-4.584-.216-2.114 0-2.75.781-2.75 1.486 0 .914.845 1.41 2.82 1.975 3.663 1.054 6.063 2.54 6.063 5.714 0 3.74-2.749 5.924-7.193 6.063a35.31 35.31 0 0 1 -6.35-.349c-1.415-.216-1.485-.216-1.13-2.26.35-1.829.35-1.975 1.69-1.829 1.963.248 3.944.341 5.923.28m23.067-15.029h-11.918c-1.689 0-1.689 0-2.044 2.05-.356 2.052-.28 2.045 1.2 2.045h3.88l-2.191 12.648c-.42 2.463-.35 2.463 1.835 2.463 2.044 0 2.114 0 2.4-1.758l2.253-13.334h3.74c1.69 0 1.69 0 2.045-2.044.355-2.045.349-2.05-1.2-2.05m21.015 4.025c1.69 0 1.69 0 2.045-2.045.355-2.044.35-2.044-1.2-2.044h-8.533c-3.035 0-2.96 0-3.454 3.035l-2.184 12.761c-.566 3.315-.496 3.315 2.54 3.315h8.323c1.765 0 1.689 0 2.044-1.975.356-1.974.35-2.044-1.2-2.044h-7.2l.566-3.67h5.993c1.626 0 1.626 0 1.905-1.905.28-1.905.28-1.974-1.905-1.974h-5.289l.565-3.46zm9.01 6.749 2.75-6.064c.215-.495.215-.495.564-.495.35 0 .356 0 .426.565l.844 5.994zm7.473-8.464c-.419-2.4-.419-2.4-3.81-2.4-3.174 0-3.104 0-4.088 1.975l-7.124 14.882c-1.06 2.115-.845 2.324 1.759 2.324 2.05 0 2.05 0 2.895-1.905l1.124-2.54h6.914l.35 2.54c.285 1.905.355 1.905 2.4 1.905 2.33 0 2.539-.14 2.113-2.47l-2.533-14.31zm16.87-2.33h-11.987c-1.696 0-1.696 0-2.045 2.05-.35 2.052-.286 2.045 1.194 2.045h3.88l-2.185 12.648c-.425 2.463-.356 2.463 1.835 2.463 2.044 0 2.114 0 2.394-1.758l2.26-13.334h3.733c1.695 0 1.695 0 2.045-2.044.349-2.045.425-2.05-1.124-2.05" fill="#ff8000" fill-rule="nonzero"/></svg>
@@ -410,7 +410,7 @@
                 <h2 class="section-title ff-secondary text-center text-primary fw-normal mb-3">Reviews</h2>
             </div>
             <div class="row">
-                <div class="col-sm-4">
+                <div class="col-sm-4 mb-3">
                     <div class="card wow fadeInUp" data-wow-delay="0.1s">
                         <div class="card-body">
                             <div class="card-text">
@@ -427,7 +427,7 @@
                     </div>
                 </div>
 
-                <div class="col-sm-4">
+                <div class="col-sm-4 mb-3">
                     <div class="card wow fadeInUp" data-wow-delay="0.1s">
                         <div class="card-body">
                             <div class="card-text">
@@ -444,7 +444,7 @@
                     </div>
                 </div>
 
-                <div class="col-sm-4">
+                <div class="col-sm-4 mb-3">
                     <div class="card wow fadeInUp" data-wow-delay="0.1s">
                         <div class="card-body">
                             <div class="card-text">
