--- a/booking.html
+++ b/booking.html
@@ -46,10 +46,18 @@
         <!-- Navbar & Hero Start -->
         <div class="container-xxl position-relative p-0">
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark px-4 px-lg-5 py-3 py-lg-0">
-                <a href="" class="navbar-brand p-0">
+                <a href="index.html" class="navbar-brand p-0">
                     <img class="logo_img" src="img/logo.jpg" alt="Logo">
                     <span class="logo_green fw-bold"> MamaBobo <span class="logo_orange">Restaurant</span></span>
                 </a>
+                <div class="nav-item dropdown order_link">
+                    <a href="#" class="nav-link text-white m-2 dropdown-toggle" data-bs-toggle="dropdown">Order</a>
+                    <div class="dropdown-menu m-0">
+                        <a href="https://deliveroo.co.uk/menu/Belfast/ballynafeigh/mama-bobo-restaurant?geohash=gcey3r6m7vxq" class="dropdown-item">Deliveroo</a>
+                        <a href="https://www.ubereats.com/gb/store/mama-bobo-restaurant/fBYs2Wk_XsKQX_xu53hhyw?diningMode=PICKUP&utm_campaign=place-action-link&utm_medium=organic&utm_source=google" class="dropdown-item">UberEats</a>
+                        <a href="https://www.just-eat.co.uk/restaurants-mama-bobo-africa-restaurant-ballynafoy/menu?serviceType=collection&utm_source=google&utm_medium=organic&utm_campaign=foodorder" class="dropdown-item">JustEats</a>
+                    </div>
+                </div>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                     <span class="fa fa-bars"></span>
                 </button>
@@ -57,9 +65,6 @@
                     <div class="navbar-nav ms-auto py-0 pe-4">
                         <a href="index.html" class="nav-item nav-link">Home</a>
                         <!-- <a href="about.html" class="nav-item nav-link">About</a> -->
-                        <a href="menu.html" class="nav-item nav-link">Menu</a>
-                        <a href="faq.html" class="nav-item nav-link">FAQ</a>
-                        <!-- <a href="booking.html" class="nav-item nav-link">Booking</a> -->
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Order</a>
                             <div class="dropdown-menu m-0">
@@ -68,9 +73,11 @@
                                 <a href="https://www.just-eat.co.uk/restaurants-mama-bobo-africa-restaurant-ballynafoy/menu?serviceType=collection&utm_source=google&utm_medium=organic&utm_campaign=foodorder" class="dropdown-item">JustEats</a>
                             </div>
                         </div>
+                        <a href="menu.html" class="nav-item nav-link">Menu</a>
+                        <a href="faq.html" class="nav-item nav-link">FAQ</a>
                         <a href="contact.html" class="nav-item nav-link">Contact Us</a>
                     </div>
-                    <a href="booking.html" class="btn btn-primary py-2 px-4">Book A Table</a>
+                    <!-- <a href="booking.html" class="btn btn-primary py-2 px-4">Book A Table</a> -->
                 </div>
             </nav>
 
