--- a/menu.html
+++ b/menu.html
@@ -217,7 +217,7 @@
                                                 
                                                 <span class="text-primary">£7.50</span>
                                             </h5>
-                                            <small class="fst-italic">Ipsum ipsum clita erat amet dolor justo diam</small>
+                                            <small class="fst-italic">Juicy wings tossed in our signature Nigerian-style pepper sauce, full of flavour and heat</small>
                                         </div>
                                     </div>
                                 </div>
@@ -231,7 +231,7 @@
                                                 <span>Chicken Wings Suya</span>
                                                 <span class="text-primary">£7.50</span>
                                             </h5>
-                                            <small class="fst-italic">Ipsum ipsum clita erat amet dolor justo diam</small>
+                                            <small class="fst-italic">Tender, spicy grilled chicken skewers marinated in authentic.</small>
                                         </div>
                                     </div>
                                 </div>
@@ -245,7 +245,7 @@
                                                 <span>Beef Suya</span>
                                                 <span class="text-primary">£7.50</span>
                                             </h5>
-                                            <small class="fst-italic">Ipsum ipsum clita erat amet dolor justo diam</small>
+                                            <small class="fst-italic">Grilled beef seasoned with a tantalizing blend of suya spices.</small>
                                         </div>
                                     </div>
                                 </div>
@@ -259,7 +259,7 @@
                                                 <span>Turkey Suya</span>
                                                 <span class="text-primary">£7.00</span>
                                             </h5>
-                                            <small class="fst-italic">Ipsum ipsum clita erat amet dolor justo diam</small>
+                                            <small class="fst-italic">Grilled turkey with a tantalizing blend of suya spices.</small>
                                         </div>
                                     </div>
                                 </div>
@@ -609,8 +609,7 @@
 
     <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="lib/wow/wow.min.js"></script>
     <script src="lib/easing/easing.min.js"></script>
     <script src="lib/waypoints/waypoints.min.js"></script>
