--- a/menu.html
+++ b/menu.html
@@ -104,7 +104,7 @@
                     <!-- <h1 class="mb-5">Most Popular Items</h1> -->
                 </div>
                 <div class="tab-class text-center wow fadeInUp" data-wow-delay="0.1s">
-                    <ul class="nav nav-pills d-inline-flex justify-content-center border-bottom mb-5">
+                    <ul class="nav nav-pills d-flex flex-wrap justify-content-center border-bottom mb-5">
                         <!-- <li class="nav-item">
                             <a class="d-flex align-items-center text-start mx-3 ms-0 pb-3 active" data-bs-toggle="pill" href="#tab-1">
                                 <i class="fa fa-coffee fa-2x text-primary"></i>
@@ -116,7 +116,7 @@
                         </li> -->
 
                         <!--- starters-->
-                        <li class="nav-item">
+                        <li class="nav-item col-6 col-md-auto">
                             <a class="d-flex align-items-center text-start mx-3 pb-3" data-bs-toggle="pill" href="#starters">
                                 <i class="fa fa-hamburger fa-2x primary_green"></i>
                                 <div class="ps-2">
@@ -127,7 +127,7 @@
                         </li>
 
                         <!--- rice dishes-->
-                        <li class="nav-item">
+                        <li class="nav-item col-6 col-md-auto">
                             <a class="d-flex align-items-center text-start mx-3 pb-3" data-bs-toggle="pill" href="#rice-dishes">
                                 <i class="fa fa-hamburger fa-2x text-primary"></i>
                                 <div class="ps-3">
@@ -138,7 +138,7 @@
                         </li>
 
                         <!--- soup dishes-->
-                        <li class="nav-item">
+                        <li class="nav-item col-6 col-md-auto">
                             <a class="d-flex align-items-center text-start mx-3 pb-3" data-bs-toggle="pill" href="#soup-dishes">
                                 <i class="fa fa-hamburger fa-2x text-primary"></i>
                                 <div class="ps-3">
@@ -149,7 +149,7 @@
                         </li>
 
                         <!--- specials-->
-                        <li class="nav-item">
+                        <li class="nav-item col-6 col-md-auto">
                             <a class="d-flex align-items-center text-start mx-3 pb-3" data-bs-toggle="pill" href="#specials">
                                 <i class="fa fa-hamburger fa-2x text-primary"></i>
                                 <div class="ps-2">
@@ -161,7 +161,7 @@
                         
 
                         <!---swallow-->
-                        <li class="nav-item">
+                        <li class="nav-item col-6 col-md-auto">
                             <a class="d-flex align-items-center text-start mx-3 pb-3" data-bs-toggle="pill" href="#swallow">
                                 <i class="fa fa-hamburger fa-2x text-primary"></i>
                                 <div class="ps-3">
@@ -171,7 +171,7 @@
                         </li>
 
                         <!---sides-->
-                        <li class="nav-item">
+                        <li class="nav-item col-6 col-md-auto">
                             <a class="d-flex align-items-center text-start mx-3 pb-3" data-bs-toggle="pill" href="#sides">
                                 <i class="fa fa-hamburger fa-2x text-primary"></i>
                                 <div class="ps-3">
@@ -181,7 +181,7 @@
                         </li>
 
                         <!-- drinks-->
-                        <li class="nav-item">
+                        <li class="nav-item col-6 col-md-auto">
                             <a class="d-flex align-items-center text-start mx-3 me-0 pb-3" data-bs-toggle="pill" href="#drinks">
                                 <i class="fa fa-utensils fa-2x text-primary"></i>
                                 <div class="ps-3">
@@ -191,7 +191,7 @@
                         </li>
 
                         <!-- desserts-->
-                        <li class="nav-item">
+                        <li class="nav-item col-6 col-md-auto">
                             <a class="d-flex align-items-center text-start mx-3 me-0 pb-3" data-bs-toggle="pill" href="#desserts">
                                 <i class="fa fa-utensils fa-2x text-primary"></i>
                                 <div class="ps-3">
@@ -201,20 +201,20 @@
                         </li>
 
                         <!---kids menu-->
-                        <li class="nav-item">
+                        <li class="nav-item col-6 col-md-auto">
                             <a class="d-flex align-items-center text-start mx-3 pb-3" data-bs-toggle="pill" href="#kids-menu">
                                 <i class="fa fa-hamburger fa-2x text-primary"></i>
                                 <div class="ps-3">
-                                    <h6 class="mt-n1 mb-0">Kids</h6>
+                                    <h6 class="mt-n1 mb-0">Kids Menu</h6>
                                 </div>
                             </a>
                         </li>
                         <!---spice guide-->
-                        <li class="nav-item">
+                        <li class="nav-item col-6 col-md-auto">
                             <a class="d-flex align-items-center text-start mx-3 pb-3" data-bs-toggle="pill" href="#spice-guide">
                                 <i class="fa fa-hamburger fa-2x text-primary"></i>
                                 <div class="ps-3">
-                                    <h6 class="mt-n1 mb-0">Spice</h6>
+                                    <h6 class="mt-n1 mb-0">Spice Guide</h6>
                                 </div>
                             </a>
                         </li>
