--- a/menu.html
+++ b/menu.html
@@ -118,7 +118,7 @@
                         <!--- starters-->
                         <li class="nav-item col-6 col-md-auto">
                             <a class="d-flex align-items-center text-start mx-3 pb-3" data-bs-toggle="pill" href="#starters">
-                                <i class="fa fa-hamburger fa-2x primary_green"></i>
+                                <img src="/img/menu/bowl.png" alt="" class="menu_img_icon">
                                 <div class="ps-2">
                                     <!-- <small class="text-body">Rice</small> -->
                                     <h6 class="mt-n1 mb-0">Starters</h6>
@@ -129,7 +129,7 @@
                         <!--- rice dishes-->
                         <li class="nav-item col-6 col-md-auto">
                             <a class="d-flex align-items-center text-start mx-3 pb-3" data-bs-toggle="pill" href="#rice-dishes">
-                                <i class="fa fa-hamburger fa-2x text-primary"></i>
+                                <img src="/img/menu/bowl.png" alt="" class="menu_img_icon">
                                 <div class="ps-3">
                                     <h6 class="">Rice</h6>
                                     <h6 class="mt-n1 mb-0">Dishes</h6>
@@ -140,7 +140,7 @@
                         <!--- soup dishes-->
                         <li class="nav-item col-6 col-md-auto">
                             <a class="d-flex align-items-center text-start mx-3 pb-3" data-bs-toggle="pill" href="#soup-dishes">
-                                <i class="fa fa-hamburger fa-2x text-primary"></i>
+                                <img src="/img/menu/bowl.png" alt="" class="menu_img_icon">
                                 <div class="ps-3">
                                     <h6 class="">Soup</h6>
                                     <h6 class="mt-n1 mb-0">Dishes</h6>
@@ -151,7 +151,7 @@
                         <!--- specials-->
                         <li class="nav-item col-6 col-md-auto">
                             <a class="d-flex align-items-center text-start mx-3 pb-3" data-bs-toggle="pill" href="#specials">
-                                <i class="fa fa-hamburger fa-2x text-primary"></i>
+                                <img src="/img/menu/bowl.png" alt="" class="menu_img_icon">
                                 <div class="ps-2">
                                     <!-- <small class="text-body">Soup</small> -->
                                     <h6 class="mt-n1 mb-0">Specials</h6>
@@ -163,7 +163,7 @@
                         <!---swallow-->
                         <li class="nav-item col-6 col-md-auto">
                             <a class="d-flex align-items-center text-start mx-3 pb-3" data-bs-toggle="pill" href="#swallow">
-                                <i class="fa fa-hamburger fa-2x text-primary"></i>
+                                <img src="/img/menu/bowl.png" alt="" class="menu_img_icon">
                                 <div class="ps-3">
                                     <h6 class="mt-n1 mb-0">Swallow</h6>
                                 </div>
@@ -173,7 +173,7 @@
                         <!---sides-->
                         <li class="nav-item col-6 col-md-auto">
                             <a class="d-flex align-items-center text-start mx-3 pb-3" data-bs-toggle="pill" href="#sides">
-                                <i class="fa fa-hamburger fa-2x text-primary"></i>
+                                <img src="/img/menu/bowl.png" alt="" class="menu_img_icon">
                                 <div class="ps-3">
                                     <h6 class="mt-n1 mb-0">Sides</h6>
                                 </div>
@@ -183,7 +183,7 @@
                         <!-- drinks-->
                         <li class="nav-item col-6 col-md-auto">
                             <a class="d-flex align-items-center text-start mx-3 me-0 pb-3" data-bs-toggle="pill" href="#drinks">
-                                <i class="fa fa-utensils fa-2x text-primary"></i>
+                                <img src="/img/menu/softdrink.png" alt="" class="menu_img_icon">
                                 <div class="ps-3">
                                     <h6 class="mt-n1 mb-0">Drinks</h6>
                                 </div>
@@ -193,7 +193,7 @@
                         <!-- desserts-->
                         <li class="nav-item col-6 col-md-auto">
                             <a class="d-flex align-items-center text-start mx-3 me-0 pb-3" data-bs-toggle="pill" href="#desserts">
-                                <i class="fa fa-utensils fa-2x text-primary"></i>
+                                <img src="/img/menu/dessert.png" alt="" class="menu_img_icon">
                                 <div class="ps-3">
                                     <h6 class="mt-n1 mb-0">Desserts</h6>
                                 </div>
@@ -203,7 +203,7 @@
                         <!---kids menu-->
                         <li class="nav-item col-6 col-md-auto">
                             <a class="d-flex align-items-center text-start mx-3 pb-3" data-bs-toggle="pill" href="#kids-menu">
-                                <i class="fa fa-hamburger fa-2x text-primary"></i>
+                                <img src="/img/menu/bowl.png" alt="" class="menu_img_icon">
                                 <div class="ps-3">
                                     <h6 class="mt-n1 mb-0">Kids Menu</h6>
                                 </div>
@@ -212,7 +212,7 @@
                         <!---spice guide-->
                         <li class="nav-item col-6 col-md-auto">
                             <a class="d-flex align-items-center text-start mx-3 pb-3" data-bs-toggle="pill" href="#spice-guide">
-                                <i class="fa fa-hamburger fa-2x text-primary"></i>
+                                <img src="/img/menu/info.png" alt="" class="menu_img_icon">
                                 <div class="ps-3">
                                     <h6 class="mt-n1 mb-0">Spice Guide</h6>
                                 </div>
