--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
                     <h1 class="mb-5">You can order from any platform</h1>
                 </div>
                 <div class="row g-4 justify-content-center">
-                    <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.1s">
+                    <div class="col-lg-3 col-sm-6 text-center wow fadeInUp" data-wow-delay="0.1s">
                         <div class="order-item order_card rounded pt-3 justify-content-center">
                             <div class="p-3">
                                 <a href="https://deliveroo.co.uk/menu/Belfast/ballynafeigh/mama-bobo-restaurant?geohash=gcey3r6m7vxq">
@@ -383,7 +383,7 @@
                     </div>
 
                     
-                    <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.3s">
+                    <div class="col-lg-3 col-sm-6 text-center wow fadeInUp" data-wow-delay="0.3s">
                         <div class="order-item order_card rounded pt-3 justify-content-center">
                             <div class="p-4">
                                 <a href="https://www.ubereats.com/gb/store/mama-bobo-restaurant/fBYs2Wk_XsKQX_xu53hhyw?diningMode=PICKUP&utm_campaign=place-action-link&utm_medium=organic&utm_source=google">
@@ -392,7 +392,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.7s">
+                    <div class="col-lg-3 col-sm-6 text-center wow fadeInUp" data-wow-delay="0.7s">
                         <div class="order-item order_card rounded pt-0 justify-content-center">
                             <div class="p-3">
                                 <a href="https://www.just-eat.co.uk/restaurants-mama-bobo-africa-restaurant-ballynafoy/menu?serviceType=collection&utm_source=google&utm_medium=organic&utm_campaign=foodorder">
@@ -537,11 +537,11 @@
                 <div class="row g-5">
                     <div class="col-lg-3 col-md-6">
                         <h5 class="section-title ff-secondary text-start primary_orange fw-normal mb-4"><span class="primary_green">MamaBobo</span> Restaurant</h5>
-                        <a class="btn btn-link" href="about.html">About Us</a>
+                        <!-- <a class="btn btn-link" href="about.html">About Us</a> -->
                         <a class="btn btn-link" href="contact.html">Contact Us</a>
                         <a class="btn btn-link" href="faq.html">Frequently Asked Questions</a>
-                        <a class="btn btn-link" href="privacy_policy.html">Privacy Policy</a>
-                        <a class="btn btn-link" href="terms.html">Terms & Condition</a>
+                        <!-- <a class="btn btn-link" href="privacy_policy.html">Privacy Policy</a> -->
+                        <a class="btn btn-link" href="terms.html">Terms & Conditions</a>
                     </div>
                     <div class="col-lg-3 col-md-6">
                         <h5 class="section-title ff-secondary text-start text-primary fw-normal mb-4">Contact</h5>
