--- a/menu.html
+++ b/menu.html
@@ -331,8 +331,8 @@
                                         <img class="flex-shrink-0 img-fluid img_round" src="img/menu/starters/fried-plaintain.jpg" alt="" style="width: 80px;">
                                         <div class="w-100 d-flex flex-column text-start ps-4">
                                             <h5 class="d-flex justify-content-between border-bottom pb-2">
-                                                <span class="">Plantain
-                                                    <span class="">
+                                                <span class="d-flex justify-content-between">Plantain
+                                                    <span class="d-flex">
                                                         <a tabindex="0" class="" role="button" data-bs-toggle="popover" data-bs-trigger="focus" data-bs-title="Vegan Information" data-bs-content="For vegetarian and vegan dishes, please specify to staff.">
                                                             <img src="/img/icons/vegan.png" class="menu_icon" alt="">
                                                         </a>
@@ -1333,11 +1333,11 @@
                 <div class="row g-5">
                     <div class="col-lg-3 col-md-6">
                         <h5 class="section-title ff-secondary text-start primary_orange fw-normal mb-4"><span class="primary_green">MamaBobo</span> Restaurant</h5>
-                        <a class="btn btn-link" href="about.html">About Us</a>
+                        <!-- <a class="btn btn-link" href="about.html">About Us</a> -->
                         <a class="btn btn-link" href="contact.html">Contact Us</a>
                         <a class="btn btn-link" href="faq.html">Frequently Asked Questions</a>
-                        <a class="btn btn-link" href="privacy_policy.html">Privacy Policy</a>
-                        <a class="btn btn-link" href="terms.html">Terms & Condition</a>
+                        <!-- <a class="btn btn-link" href="privacy_policy.html">Privacy Policy</a> -->
+                        <a class="btn btn-link" href="terms.html">Terms & Conditions</a>
                     </div>
                     <div class="col-lg-3 col-md-6">
                         <h5 class="section-title ff-secondary text-start text-primary fw-normal mb-4">Contact</h5>
