--- a/booking.html
+++ b/booking.html
@@ -161,11 +161,11 @@
                 <div class="row g-5">
                     <div class="col-lg-3 col-md-6">
                         <h5 class="section-title ff-secondary text-start primary_orange fw-normal mb-4"><span class="primary_green">MamaBobo</span> Restaurant</h5>
-                        <a class="btn btn-link" href="about.html">About Us</a>
+                        <!-- <a class="btn btn-link" href="about.html">About Us</a> -->
                         <a class="btn btn-link" href="contact.html">Contact Us</a>
                         <a class="btn btn-link" href="faq.html">Frequently Asked Questions</a>
-                        <a class="btn btn-link" href="privacy_policy.html">Privacy Policy</a>
-                        <a class="btn btn-link" href="terms.html">Terms & Condition</a>
+                        <!-- <a class="btn btn-link" href="privacy_policy.html">Privacy Policy</a> -->
+                        <a class="btn btn-link" href="terms.html">Terms & Conditions</a>
                     </div>
                     <div class="col-lg-3 col-md-6">
                         <h5 class="section-title ff-secondary text-start text-primary fw-normal mb-4">Contact</h5>
